@@ -1,3 +1,9 @@
+2011-01-29  svu
+
+	* libxklavier/xklavier_xkb.c: checking that XInput is >=2, otherwise
+	DevicePresence may be missing.
+	https://bugzilla.gnome.org/show_bug.cgi?id=583709
+
 2011-01-28  svu
 
 	* libxklavier/xkl_config_registry.h, libxklavier/xklavier_config.c,
